# DaNCES_framework

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
dances_imgui/: AppWin.cpp  AppWin.h  Renderer.cpp  Renderer.h  camera.hpp  imgui_guard.cpp  imgui_guard.hpp  imgui_handler.cpp  imgui_handler.hpp  imgui_styles.h  imgui_unit.h  main.cpp  pip.cpp  pip.hpp  skybox.cpp  skybox.hpp
libs/: circumcenter.hpp  exe_path.hpp  game_watches.hpp  graph.hpp  mutex.hpp  rndutils.hpp  throttle.hpp
libs/glmutils/: bbox.hpp  perp_dot.hpp  plane.hpp  ray.hpp  transform2d.hpp
libs/glsl/: ac3d.cpp  ac3d.hpp  camera.cpp  camera.h  debug.cpp  debug.h  glsl.hpp  imm.cpp  imm.hpp  shader.cpp  shader.h
libs/hrtree/: adapt_mbr.hpp  adapt_point.hpp  compact_rtree.hpp  config.hpp  hrtree.hpp  mbr_build_policy.hpp  mbr_intersect_policy.hpp  rtree.hpp  rtree_base.hpp
libs/hrtree/arch/: bits.hpp  omp_stub.hpp  select.hpp
libs/hrtree/arch/simd/: key_gen_impl.hpp  mbr_build_policy_impl.hpp  mbr_intersect_policy_impl.hpp  simd_aux.hpp
libs/hrtree/isfc/: gray.hpp  hilbert.hpp  key.hpp  key_gen.hpp  morton.hpp  sorter.hpp
libs/hrtree/isfc/detail/: fsm.hpp  gray2d.hpp  gray3d.hpp  hilbert2d.hpp  hilbert3d.hpp  hilbert4d.hpp
libs/hrtree/memory/: aligned_buffer.hpp  aligned_iterator.hpp  aligned_memory.hpp
libs/hrtree/sorting/: insertion_sort.hpp  parallel_partition.hpp  parallel_quick_sort.hpp  parallel_radix_sort.hpp  partition.hpp  quick_sort.hpp  radix_sort.hpp
libs/hrtree/zip/: zip.hpp
model/: flight.hpp  flight_control.hpp  group.cpp  group.hpp  init_cond.hpp  json.cpp  json.hpp  math.hpp  model.hpp  observer.hpp  simulation.cpp  simulation.hpp  while_topo.hpp
model/actions/: action_base.hpp  align_actions.hpp  avoid_actions.hpp  avoid_pred_actions.hpp  cohere_actions.hpp  cohere_speed_actions.hpp  escape_actions.hpp  flight_actions.hpp  hunt_actions.hpp  mixed_actions.hpp  no_interacting_actions.hpp  predator_actions.hpp  roosting.hpp
model/agents/: agents.hpp  agents_fwd.hpp  predator.cpp  predator.hpp  prey.cpp  prey.hpp
model/analysis/: analysis.hpp  analysis_obs.hpp  cvs_exporter.hpp  diffusion_obs.hpp  meta_obs.hpp
model/states/: multi_state.hpp  persistent.hpp  state_base.hpp  transient.hpp  transitions.hpp
model/stress/: sources.hpp  stress_base.hpp
